add sections skills, testimonials, subscribe, refactoring clients sections

--- a/src/blocks/_blocks.scss
+++ b/src/blocks/_blocks.scss
@@ -9,7 +9,10 @@
 @import "features/features";
 @import "features-2/features-2";
 @import "features-3/features-3";
-@import "services/services";
 @import "numbers/numbers";
 @import "clients/clients";
 @import "clients-2/clients-2";
+@import "skills/skills";
+@import "services/services";
+@import "testimonials/testimonials";
+@import "subscribe/subscribe";
