--- a/src/blocks/cite/cite.scss
+++ b/src/blocks/cite/cite.scss
@@ -13,23 +13,34 @@
   }
 
   &__text {
-
+    box-sizing: content-box;
     padding-block: 4rem;
     padding-inline: 7rem;
-    width: 68ch;
+    margin: 0;
+    margin-block-end: 3rem;
+    max-width: 68ch;
     font-family: var(--ff-secondary);
     font-style: italic;
     font-size: 1.25rem;
     font-weight: 400;
     line-height: 177%;
+    color: hsl(var(--clr-white));
+    background: hsl(var(--clr-secondary-100));
   }
 
   &__author {
-
+    margin-inline-start: 5.5rem;
+    font-family: var(--ff-primary);
+    font-style: normal;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 160%;
+    color: hsl(var(--clr-dark-300));
   }
 
   &__accent {
-
+    font-weight: 800;
+    color: hsl(var(--clr-primary));
   }
 
   &__image-author {
