--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,7 +24,10 @@
     <include src="src/blocks/numbers/numbers.html"></include>
     <include src="src/blocks/clients/clients.html"></include>
     <include src="src/blocks/clients-2/clients-2.html"></include>
+    <include src="src/blocks/skills/skills.html"></include>
     <include src="src/blocks/services/services.html"></include>
+    <include src="src/blocks/testimonials/testimonials.html"></include>
+    <include src="src/blocks/subscribe/subscribe.html"></include>
   </main>
 
   <script src="js/index.js"></script>
