add section subscribe footer

--- a/src/blocks/features-2/features-2.scss
+++ b/src/blocks/features-2/features-2.scss
@@ -54,5 +54,10 @@
     right: -6.15rem;
     width: 411px;
     height: 1146px;
+    background: hsl(var(--clr-primary));
+
+    img {
+      mix-blend-mode: multiply;
+    }
   }
 }
