--- a/src/blocks/clients/clients.scss
+++ b/src/blocks/clients/clients.scss
@@ -1,6 +1,20 @@
 .clients {
+  position: relative;
   padding-block: 8rem;
   background: hsl(var(--clr-secondary-300));
+  
+  &__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: url("../img/clients-bg.png");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    mix-blend-mode: multiply;
+  }
 
   &__wrapper {
     display: grid;
