--- a/src/views/index.html
+++ b/src/views/index.html
@@ -29,7 +29,7 @@
     <include src="src/blocks/testimonials/testimonials.html"></include>
     <include src="src/blocks/subscribe/subscribe.html"></include>
   </main>
-
+  <include src="src/blocks/footer/footer.html"></include>
   <script src="js/index.js"></script>
 </body>
 </html>
