--- a/src/blocks/_blocks.scss
+++ b/src/blocks/_blocks.scss
@@ -17,6 +17,7 @@
 @import "skills/skills";
 @import "services-card/services-card";
 @import "services/services";
+@import "our-team/our-team";
 @import "testimonials/testimonials";
 @import "subscribe/subscribe";
 @import "footer/footer";
