--- a/src/views/index.html
+++ b/src/views/index.html
@@ -18,18 +18,18 @@
   }'></include>
   
   <main class="page-main">
-    <!-- <include src="src/blocks/intro/intro.html"></include> -->
+    <include src="src/blocks/intro/intro.html"></include>
     <include src="src/blocks/intro-2/intro-2.html"></include>
     <include src="src/blocks/intro-3/intro-3.html"></include>
-    <!-- <include src="src/blocks/cite/cite.html"></include> -->
-    <!-- <include src="src/blocks/features/features.html"></include> -->
-    <!-- <include src="src/blocks/features-2/features-2.html"></include> -->
+    <include src="src/blocks/cite/cite.html"></include>
+    <include src="src/blocks/features/features.html"></include>
+    <include src="src/blocks/features-2/features-2.html"></include>
     <include src="src/blocks/features-3/features-3.html"></include>
     <include src="src/blocks/numbers/numbers.html"></include>
     <include src="src/blocks/clients/clients.html"></include>
-    <!-- <include src="src/blocks/clients-2/clients-2.html"></include> -->
+    <include src="src/blocks/clients-2/clients-2.html"></include><!-- todo -->
     <include src="src/blocks/skills/skills.html"></include>
-    <!-- <include src="src/blocks/testimonials/testimonials.html"></include> -->
+    <include src="src/blocks/testimonials/testimonials.html"></include>
     <include src="src/blocks/services/services.html"></include>
     <include src="src/blocks/subscribe/subscribe.html"></include>
   </main>
