--- a/src/views/pages/about.html
+++ b/src/views/pages/about.html
@@ -19,7 +19,7 @@
   
   <main class="page-main">
     <include src="src/blocks/about-intro/about-intro.html"></include>
-    <!-- <include src="src/blocks/about-features/about-features.html"></include> -->
+    <include src="src/blocks/about-features/about-features.html"></include>
     <include src="src/blocks/clients-2/clients-2.html" locals='{
       "classMod": "clients-2--secondary"
     }'></include>
