--- a/src/views/pages/team.html
+++ b/src/views/pages/team.html
@@ -19,6 +19,7 @@
   }'></include>
   
   <main class="page-main">
+    <include src="src/blocks/our-team/our-team.html"></include>
     <include src="src/blocks/testimonials/testimonials.html"></include>
     <include src="src/blocks/subscribe/subscribe.html"></include>
   </main>
