--- a/src/blocks/features/features.scss
+++ b/src/blocks/features/features.scss
@@ -1,33 +1,53 @@
-.features {  
-  padding-top: 1rem;
+.features {
+  padding-block-start: min(10vw, 8rem);
+  padding-block-end: min(12.5vw, 10rem);
   color: hsl(var(--clr-white));
-  background: 
-  linear-gradient(to right, hsl(var(--clr-secondary-300)) 70%, transparent 70%, transparent 100%),
-              linear-gradient(to bottom, transparent 44rem, hsl(var(--clr-secondary-400)) 44rem, hsl(var(--clr-secondary-300)) 100%);
+  background: hsl(var(--clr-secondary-400));
+
   &__wrapper {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(27, 18px);
-    grid-gap: 18px 30px;
+
+    @media (min-width: 1024px) {
+
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-auto-rows: auto;
+      column-gap: 30px;
+    }
   }
 
   &__title {
-    grid-column: 1/span 6;
-    grid-row: 4/span 4;
-    z-index: 100;
+    margin-block-end: 1rem;
+
+    @media (min-width: 1024px) {
+
+      grid-column: 1/span 6;
+      grid-row: 1;
+    }
   }
+
   &__subheader {
-    grid-column: 1/span 5;
-    grid-row: 8/span 3;
+    margin-block-end: 4rem;
     max-width: 48ch;
+
+    @media (min-width: 1024px) {
+
+      grid-column: 1/span 6;
+      grid-row: 2;
+    }
   }
 
   &__text-wrapper {
-    grid-column: 1/span 5;
-    grid-row: 12/span 9;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    margin-block-end: 2.5rem;
+    height: 295px;
+
+    @media (min-width: 1024px) {
+
+      grid-column: 1/span 5;
+      grid-row: 3;
+    }
   }
 
   &__text {
@@ -40,33 +60,48 @@
   }
 
   &__button {
-    grid-column: 1/span 3;
-    grid-row: 22/span 2;
+
+    @media (min-width: 1024px) {
+
+      grid-column: 1/span 3;
+      grid-row: 4;
+    }
+  }
+
+  &__slider {
+    display: flex;
+    flex-direction: column;
+    margin-block-end: 2rem;
+    @media (min-width: 1024px) {
+      margin: 0;
+      grid-column: 7/span 6;
+      grid-row: 2/5;
+    }
+  }
+
+  &__slider-wrapper {
+    display: flex;
   }
 
   &__slider-header {
-    grid-column: 12;
-    grid-row: 11/span 7;
+    order: 2;
     justify-self: center;
     margin: 0;
+    margin-block-start: 30px;
     writing-mode: vertical-lr;
     text-align: center;
     color: hsl(var(--clr-secondary-100));
   }
 
   &__slider-image {
-    grid-column: 7/span 5;
-    grid-row: 6/span 17;
     max-width: 460px;
   }
 
   &__slider-control {
-    grid-column: 10/span 2;
-    grid-row: 24/span 2;
-    justify-self: end;
     display: flex;
     align-items: center;
-    margin: 0;
+    margin-inline-start: auto;
+    margin-inline-end: min(6.875vw, 5.5rem);
     font-size: 0.7rem;
     font-weight: 800;
     line-height: 206%;
@@ -86,14 +121,22 @@
     transform: rotate(-180deg);
 
     svg {
-      fill: hsla(0, 0%, 77%, 0.05);
+      fill: hsl(var(--clr-white));
     }
   }
-  
+
   &__slider-control-button:last-child {
     margin-left: 1rem;
+
     svg {
       transform: rotate(180deg);
     }
-  } 
+  }
+
+  @media (min-width: 1024px) {
+
+    background:
+      linear-gradient(to right, hsl(var(--clr-secondary-300)) 70%, transparent 70%, transparent 100%),
+      linear-gradient(to bottom, transparent 44rem, hsl(var(--clr-secondary-400)) 44rem, hsl(var(--clr-secondary-300)) 100%);
+  }
 }
