--- a/src/blocks/features/features.scss
+++ b/src/blocks/features/features.scss
@@ -78,9 +78,28 @@
       grid-row: 2/5;
     }
   }
-
   &__slider-wrapper {
+    position: relative;
     display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__slide {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
+    transition-duration: 0.4s;
+    transition-property: clip-path;
+    transition-timing-function: cubic-bezier( 0.455, 0.030, 0.515, 0.955);
+    opacity: 0;
+  }
+
+  &__slide--active {
+    opacity: 1;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
   }
 
   &__slider-header {
@@ -122,6 +141,7 @@
 
     svg {
       fill: hsl(var(--clr-white));
+      pointer-events: none;
     }
   }
 
@@ -137,6 +157,6 @@
 
     background:
       linear-gradient(to right, hsl(var(--clr-secondary-300)) 70%, transparent 70%, transparent 100%),
-      linear-gradient(to bottom, transparent 44rem, hsl(var(--clr-secondary-400)) 44rem, hsl(var(--clr-secondary-300)) 100%);
+      linear-gradient(to bottom, transparent 42rem, hsl(var(--clr-secondary-400)) 42rem, hsl(var(--clr-secondary-300)) 100%);
   }
 }
